// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex renders correctly Horizontal display with align 1`] = `
<div
  className=""
  style={
    Object {
      "columnGap": 0,
      "rowGap": 0,
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Horizontal display with align 2`] = `
<div
  className=""
  style={
    Object {
      "columnGap": 0,
      "rowGap": 0,
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Horizontal display with children 1`] = `
<div
  className=""
  style={
    Object {
      "columnGap": 0,
      "rowGap": 0,
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Horizontal display with gap 1`] = `
<div
  className=""
  style={
    Object {
      "columnGap": 24,
      "rowGap": 24,
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Horizontal display with justify 1`] = `
<div
  className=""
  style={
    Object {
      "columnGap": 0,
      "rowGap": 0,
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Horizontal display with wrap 1`] = `
<div
  className="undefined"
  style={
    Object {
      "columnGap": 0,
      "rowGap": 0,
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Vertical display with align 1`] = `
<div
  className=""
  style={
    Object {
      "columnGap": 0,
      "rowGap": 0,
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Vertical display with children 1`] = `
<div
  className=""
  style={
    Object {
      "columnGap": 0,
      "rowGap": 0,
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Vertical display with justify 1`] = `
<div
  className=""
  style={
    Object {
      "columnGap": 0,
      "rowGap": 0,
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly Vertical display with wrap 1`] = `
<div
  className="undefined"
  style={
    Object {
      "columnGap": 0,
      "rowGap": 0,
    }
  }
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`Flex renders correctly with empty props 1`] = `
<div
  className=""
  style={
    Object {
      "columnGap": 0,
      "rowGap": 0,
    }
  }
/>
`;
